<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.lalit.levelforge.ui.home.HomeFragment"
        android:label="@string/dashboard_title">
        <action
            android:id="@+id/action_homeFragment_to_onboardingFragment"
            app:destination="@id/onboardingFragment" />
        <action
            android:id="@+id/action_homeFragment_to_exerciseLibraryFragment"
            app:destination="@id/exerciseLibraryFragment" />
        <action
            android:id="@+id/action_homeFragment_to_workoutLoggerFragment"
            app:destination="@id/workoutLoggerFragment" />
    </fragment>

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.lalit.levelforge.ui.onboarding.OnboardingFragment"
        android:label="@string/onboarding_title" />

    <fragment
        android:id="@+id/exerciseLibraryFragment"
        android:name="com.lalit.levelforge.ui.exercise.ExerciseLibraryFragment"
        android:label="@string/exercise_library_title" />

    <fragment
        android:id="@+id/workoutLoggerFragment"
        android:name="com.lalit.levelforge.ui.workout.WorkoutLoggerFragment"
        android:label="@string/workout_logger_title" />

</navigation>
